# journey

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/application/: mod.rs  participant_service.rs  trip_service.rs
backend/src/domain/: domain_event_publisher.rs  domain_event_trait.rs  entity.rs  event_service_traits.rs  mod.rs  participant.rs  participant_gateway_trait.rs  trip.rs  trip_created_event.rs  trip_gateway_trait.rs
backend/src/domain/events/: domain_event_trait.rs  mod.rs  trip_confirmed_event.rs  trip_created_event.rs
backend/src/domain/handlers/: create_owner_participant.rs  event_listener_trait.rs  invite_trip_participants.rs  mod.rs  send_confirmation_trip.rs  send_participants_confirm_trip.rs
backend/src/infra/: mod.rs  modules.rs
backend/src/infra/participant/: default_participant_gateway.rs  mod.rs  participant_model_mapper.rs  participant_repository.rs
backend/src/infra/services/: domain_service.rs  event_service_trait.rs  in_memory_service.rs  mod.rs
backend/src/infra/trip/: default_trip_gateway.rs  mod.rs  trip_model_mapper.rs  trip_repository.rs
backend/src/libs/: client_prisma.rs  mail.rs  mod.rs  prisma.rs
backend/src/routes/: confirm_participants.rs  confirm_trip.rs  create_activity.rs  create_invite.rs  create_link.rs  create_trip.rs  get_activities.rs  get_links.rs  get_participant.rs  get_participants.rs  get_trip_details.rs  list_trips.rs  mod.rs  routes_config.rs  trip_routes.rs  update_trip.rs
prisma/: dev.db  schema.prisma
prisma_cli/: Cargo.toml
