[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = "1.0.204"

prisma-client-rust = { workspace = true, features = [
  "migrations",
  "sqlite",
  "sqlite-create-many",
] }
validator = { version = "0.18.1", features = ["derive"] }
serde_json = "1.0.120"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace"] }
lettre = "0.11.7"
chrono = { version = "0.4.38", features = ["unstable-locales"] }
uuid = { version = "1.10.0", features = ["v4", "v7", "std"] }
futures = "0.3.30"

cloudevents-sdk = "0.7.0"
